--- a/useState/src/index.css
+++ b/useState/src/index.css
@@ -1,11 +1,57 @@
 body {
     background-color: #000;
     color: #fff;
+    display: flex;
+    height: 100vh;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 * {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
+}
+
+.val {
+    background-color: lavenderblush;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 50px;
+    padding: 80px;
+    border-radius: 5px;
+}
+
+h1 {
+    color: #000;
+    font-size: 100px;
+}
+
+.button-box>button {
+    background-color: bisque;
+    color: 000;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.button-box>button:hover {
+    background-color: rgb(255, 157, 36);
+    color: fff;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.button-box {
+    display: flex;
+    gap: 30px;
 }
