--- a/context-API/src/index.css
+++ b/context-API/src/index.css
@@ -22,8 +22,19 @@ ul{
   text-decoration: none;
   list-style-type: none;
   color: #fff;
+  align-items: center;
 }
 ul a{
   text-decoration: none;
   color: #fff;
+}
+.themeBtn{
+  background-color: #000;
+  color: #fff;
+  font-size: 16px;
+  padding: 12px 20px;
+  border-radius: 10px;
+  text-transform: capitalize;
+  font-weight: 500;
+  cursor: pointer;
 }
